# Nexus-Multi-Agent-Task-Orchestrator

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  vercel.json
api/: index.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  prompts.py
backend/app/api/: routes.py
backend/app/schemas/: __init__.py  agents.py  task.py
backend/app/services/: graph.py  task_store.py
backend/app/tools/: codegen.py  data_analysis.py  research.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_graph.py  test_schemas.py  test_task_store.py  test_tools.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: AboutPanel.tsx  AgentIcon.tsx  StatusBadge.tsx  StreamPanel.tsx  TaskHistory.tsx  TaskInput.tsx
frontend/src/hooks/: useTaskStream.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
